added dynamite, craftable from tnt, new mod icon

--- a/src/main/resources/data/superstestmod/recipes/apple.json
+++ b/src/main/resources/data/superstestmod/recipes/apple.json
@@ -1,16 +1,13 @@
 {
-    "type": "minecraft:crafting_unshaped",
-    "pattern": [
-        "LD"
-    ],
-    "key": {
-        "L": {
+    "type": "minecraft:crafting_shapeless",
+    "ingredients": [
+        {
             "item": "superstestmod:lemon"
         },
-        "D": {
+        {
             "item": "minecraft:red_dye"
         }
-    },
+    ],
     "result": {
         "item": "minecraft:apple",
         "count": 1
